[package]
name = "fn-memo"
version = "0.2.0"
authors = ["Jason Lee <jason5lee@hotmail.com>"]
edition = "2018"
description = "A library for creating the memoization of a function."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Jason5Lee/rust-fn-memo"
homepage = "https://crates.io/crates/fn-memo"
keywords = ["cache", "memoization"]

[dependencies]
recur-fn = "0.2.2"
once_cell = { version = "0.1.7", optional = true }
chashmap = { version = "2.2.0", optional = true }

[features]
default = ["sync"]
sync = ["once_cell", "chashmap"]

[workspace]
members = ["fn-memo-example"]